@@ -16,7 +16,6 @@ import java.io.*;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * A utility class to work with native CRAC importers
@@ -93,9 +92,9 @@ public final class NativeCracImporters {
      * @return the importer if one exists for the given format or <code>null</code> otherwise.
      */
     public static NativeCracImporter findImporter(String fileFormat) {
-        List<NativeCracImporter> importersWithFormat =  NATIVE_CRAC_IMPORTERS.get().stream()
+        List<NativeCracImporter> importersWithFormat = NATIVE_CRAC_IMPORTERS.get().stream()
             .filter(importer -> importer.getFormat().equals(fileFormat))
-            .collect(Collectors.toList());
+            .toList();
 
         if (importersWithFormat.size() == 1) {
             return importersWithFormat.get(0);
